Se cambian algunas cosas para que esto tenga soporte para Java 11 ó superior.
También se modificó la versión en el proyecto a 0.5 que es la versión que va a tener este release.