@@ -5,6 +5,7 @@ import com.roshka.sifen.internal.util.SifenExceptionUtil;
 import org.w3c.dom.Node;
 import org.w3c.dom.NodeList;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.logging.Logger;
 
 /**
@@ -15,10 +16,10 @@ public class SifenObjectFactory {
 
     public static <T extends SifenObjectBase> T getFromNode(Node mainNode, Class<T> sifenObjectBase) throws SifenException {
         try {
-            T object = sifenObjectBase.newInstance();
+            T object = sifenObjectBase.getDeclaredConstructor().newInstance();
             getFromNode(mainNode, object);
             return object;
-        } catch (InstantiationException | IllegalAccessException e) {
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
             logger.throwing(SifenObjectFactory.class.getCanonicalName(), "getFromNode", e);
             throw SifenExceptionUtil.unexpectedError(
                     "Error de instanciación al intentar crear un objeto de clase: " + sifenObjectBase.getCanonicalName() + " -> " + e.getLocalizedMessage(), e
